kubernetes/ConfigMap + Secret ENV.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-pod
  labels:
    app: myapp
spec:
  containers:
    - name: myapp
      image: nginx
      ports:
        - containerPort: 80
