kubernetes/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:               
  containers:
    - name: nginx-pod
      image: nginx
      ports:
        - containerPort: 80
    
    - name: firefox-pod
      image: linuxserver/firefox
      ports:
        - containerPort: 3000
