kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:  
  containers:
  - name: my-container
    image: nginx
    ports:
      - containerPort: 80
